fixed overflow

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ footer {
 }
 
 #headBody h2 {
-  width: 100vw;
+  width: 90vw;
   text-align: center;
 }
 
